manifests/mutating/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecar-injector-webhook-cfg
  labels:
    app: sidecar-injector
webhooks:
  - name: com.epam.admission-registry-mutate
    clientConfig:
      service:
        name: admission-registry
        namespace: default
        path: "/mutate"
      caBundle: >
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURyakNDQXBhZ0F3SUJBZ0lVYTVldExEckNj
[...]
        Ci0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments","statefulsets"]
    admissionReviewVersions: [ "v1" ]
    namespaceSelector:
      matchLabels:
        sidecar-injection: enabled
